[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pudb"
version = "2024.1.3"
description = "A full-screen, console-based Python debugger"
readme = "README.rst"
license = "MIT"
requires-python = "~=3.8"
authors = [
    { name = "Andreas Kloeckner", email = "inform@tiker.net" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Recovery Tools",
    "Topic :: System :: Software Distribution",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = [
    "jedi>=0.18,<1",
    "packaging>=20.0",
    "pygments>=2.7.4",
    "urwid>=2.4",
    "urwid_readline",
]

[project.optional-dependencies]
completion = [
    "shtab",
]

[project.scripts]
pudb = "pudb.run:main"

[tool.hatch.build.targets.sdist]
include = [
    "/pudb",
    "/doc",
    "/try-the-debugger.sh",
    "/debug_me.py",
    "/examples",
]

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "C",   # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # flake8-isort
    "N",   # pep8-naming
    "NPY", # numpy
    "Q",   # flake8-quotes
    "W",   # pycodestyle
]
extend-ignore = [
    "C90",  # McCabe complexity
    "E221", # multiple spaces before operator
    "E226", # missing whitespace around arithmetic operator
    "E241", # multiple spaces after comma
    "E242", # tab after comma
    "E402", # module level import not at the top of file
    "N818", # error suffix in exception names
]
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
combine-as-imports = true
known-local-folder = [
    "pudb",
]
lines-after-imports = 2

[tool.pytest.ini_options]

addopts = [
        "--ignore=pudb/b.py",
        "--ignore=pudb/ipython.py",
        ]


[tool.typos.default]
extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:\\s*disable-line$"
]

[tool.typos.default.extend-words]
# Ned Batchelder, person
Ned = "Ned"

[tool.typos.files]
extend-exclude = [
]
