[metadata]
project_urls =
    Homepage=https://documen.tician.de/pudb/
    Source=https://github.com/inducer/pudb
    Tracker=https://github.com/inducer/pudb/issues

[flake8]
ignore = E126,E127,E128,E123,E226,E241,E242,E265,W503,E402
max-line-length=85

inline-quotes = "
docstring-quotes = """
multiline-quotes = """

[wheel]
universal = 0
